--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width: 576px) {
-
-body { posiition: fixed;
+	body {
+		overflo: hidden;
 	}
 	nav ul {
 		position: absolute;
